--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "mogoose": "^0.0.1-security",
     "node-telegram-bot-api": "^0.66.0"
   },
   "description": ""
