--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "mogoose": "^0.0.1-security",
+    "mongoose": "^8.9.2",
     "node-telegram-bot-api": "^0.66.0"
   },
   "description": ""
